// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser.block.heading > level 1 1`] = `
[
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 1,
  },
]
`;

exports[`parser.block.heading > level 2 1`] = `
[
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 2,
  },
]
`;

exports[`parser.block.heading > level 3 1`] = `
[
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 3,
  },
]
`;

exports[`parser.block.heading > level 4 1`] = `
[
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 4,
  },
]
`;

exports[`parser.block.heading > level 5 1`] = `
[
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 5,
  },
]
`;

exports[`parser.block.heading > level 6 1`] = `
[
  {
    "class": "block.heading",
    "content": [
      {
        "class": "inline.text",
        "value": "Heading",
      },
    ],
    "level": 6,
  },
]
`;
